--- a/styles.css
+++ b/styles.css
@@ -250,13 +250,7 @@ body{
     text-align: center;
     left: 5px;
     font-size: 1.5rem;
-    cursor: pointer;
 }
-
-.alert-msg:hover{
-    transform: scale(1.01, 1.01);
-}
-
 
 .z2{
     background-color: rebeccapurple;
@@ -309,14 +303,16 @@ body{
     color: white;
     font-size: 2rem;
     text-align: center;
-    
+    cursor: pointer;
     border: 3px solid red;
     border-radius: .3em;
     transform: translateY(-40px);
     padding: 15px 15px 25px 10px;
-
-
 }
+.tutorial-msg:hover{
+    transform: scale(1.01, 1.01);
+}
+
 
 @keyframes themsg{
     0%{
