--- a/styles.css
+++ b/styles.css
@@ -298,19 +298,21 @@ body{
     animation: themsg 1200ms ease-in-out forwards reverse;
     animation-play-state: running;
     animation-iteration-count: 1;
-    width: 400px;
+    width: 410px;
     height: 280px;
     background-color: #312828;
     color: white;
     font-size: 2rem;
     text-align: center;
-    
+    cursor: pointer;
     border: 3px solid red;
     border-radius: .3em;
     transform: translateY(-40px);
     padding: 15px 15px 25px 10px;
+}
 
-
+.tutorial-msg:hover{
+    border: 5px solid rgb(27, 78, 245);
 }
 
 @keyframes themsg{
